<resources>
    <string name="app_name">mikael</string>
    <string name="trial">Trial</string>
    <string name="msg">Enter message </string>
    <string name="hint">Enter a message here</string>
    <string name="song">song</string>
    <string name="text"> list view </string>
    <string name="implicit"> implicit intent</string>
    <string name="stopbtn">STOP</string>
    <string name="playbtn">PLAY</string>
    <string name="textview" />
    <string name="desc"> THE SPLASH \n SCREEN </string>
    <string name="recycler_view">recycler view</string>
    <string name="textField">battery level</string>
    <string name="c_program">c program</string>
    <string name="call">call</string>
    <string name="mail">mail</string>
    <string name="send">SEND</string>
    <string name="start_alarm">START</string>
    <string name="alarm_time">Enter counter time for alarm</string>
    <string name="stop_alarm">STOP</string>
    <string name="alarm_counter">alarm counter</string>
    <string name="stored_msg_header">INTERNAL STORED MESSAGES</string>
    <string name="stored_msg_header2">EXTERNAL STORED MESSAGES</string>
    <string name="stored_messages">STORED MESSAGES</string>
    <string name="stored_messages_hint">STORED MESSAGES TO APPEAR HERE</string>
    <string name="HINT">enter message to be stored</string>
    <string name="hint2">message to be displayed here</string>
    <string name="database">SQLite DB ContentProviders</string>
    <string name="int_ext">InternalExternal</string>
    <string name="add">add</string>
    <string name="enter_data_here">ENTER DATA HERE..</string>
    <string name="read_data">READ DATA</string>
    <string name="view_the_c_program">view the c program</string>
    <string name="songPlayer">Song Player implementing a Foreground Service</string>
    <string name="SQLiteContentProvider">Data stored into the SQLite DB through content provider
    </string>

    <string name="googl_maps_API_key" translatable="false"></string>


</resources>
