<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/song" android:title="@string/song"/>
    <item android:id="@+id/text" android:title="@string/text"/>
    <item android:id="@+id/recycler" android:title="@string/recycler_view"/>
    <item android:id="@+id/implicit" android:title="@string/implicit"/>
    <item android:id="@+id/c" android:title="@string/c_program"/>
    <item android:id="@+id/call" android:title="@string/call"/>
    <item android:id="@+id/email" android:title="@string/mail"/>
    <item android:id="@+id/counter" android:title="@string/alarm_counter"/>
    <item android:id="@+id/sqlite" android:title="@string/database"/>
    <item android:id="@+id/int_ext" android:title="@string/int_ext"/>

</menu>