<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CountDownAnimation">

            <Button
                android:id="@+id/alarmbtn"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/design"
                android:text="@string/start_alarm"
                android:textColor="@color/white"
                android:onClick="clickMe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/startAlarm"
                app:layout_constraintTop_toBottomOf="@+id/startAlarm"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/stopalarm"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/design"
                android:text="@string/stop_alarm"
                android:onClick="stop"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/startAlarm"
                app:layout_constraintHorizontal_bias="0.195"
                app:layout_constraintStart_toEndOf="@+id/alarmbtn"
                app:layout_constraintTop_toBottomOf="@+id/startAlarm"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/startAlarm"
                android:layout_width="@dimen/editText_width"
                android:layout_height="@dimen/editText_height"
                android:layout_marginBottom="144dp"
                android:background="@drawable/play"
                android:ems="10"
                android:hint="@string/alarm_time"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/counter"
                app:layout_constraintStart_toStartOf="@+id/counter"
                app:layout_constraintTop_toBottomOf="@+id/counter" />

            <TextView
                android:id="@+id/counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="112dp"
                android:text=""
                android:textSize="@dimen/fontSize"
                app:layout_constraintEnd_toEndOf="@+id/prog"
                app:layout_constraintStart_toStartOf="@+id/prog"
                app:layout_constraintTop_toBottomOf="@+id/prog" />

            <ProgressBar
                android:id="@+id/prog"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="184dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="48dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="59dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>